--- a/multimaven-web/pom.xml
+++ b/multimaven-web/pom.xml
@@ -5,21 +5,14 @@
   <parent>
     <groupId>com.pat.multipat</groupId>
     <artifactId>multimaven</artifactId>
-    <version>1.0</version>
+    <version>1.0.1-SNAPSHOT</version>
   </parent>
-  <groupId>com.pat.multipat</groupId>
   <artifactId>multimaven-web</artifactId>
-  <version>1.0</version>
+  <version>1.0.1-SNAPSHOT</version>
   <packaging>war</packaging>
   <name>multimaven-web</name>
   <url>http://maven.apache.org</url>
   <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
     <dependency>
         <groupId>org.apache.geronimo.specs</groupId>
         <artifactId>geronimo-servlet_3.0_spec</artifactId>
