--- a/multimaven-service/pom.xml
+++ b/multimaven-service/pom.xml
@@ -5,22 +5,13 @@
   <parent>
     <groupId>com.pat.multipat</groupId>
     <artifactId>multimaven</artifactId>
-    <version>1.0</version>
+    <version>1.0.1-SNAPSHOT</version>
   </parent>
-  <groupId>com.pat.multipat</groupId>
   <artifactId>multimaven-service</artifactId>
-  <version>1.0</version>
+  <version>1.0.1-SNAPSHOT</version>
   <name>multimaven-service</name>
   <url>http://maven.apache.org</url>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
 </project>
