--- a/pom.xml
+++ b/pom.xml
@@ -95,14 +95,14 @@
     <repository>
       <id>nexus</id>
       <name>My releases</name>
-      <url>http://localhost:8081/repository/maven-releases/</url>
+      <url>http://192.168.1.29:8081/nexus/content/repositories/releases/</url>
     </repository>
 
     <!-- Publish snapshots here -->
     <snapshotRepository>
       <id>nexus</id>
       <name>My snapshots</name>
-      <url>http://localhost:8081/repository/maven-snapshots/</url>
+      <url>http://192.168.1.29:8081/nexus/content/repositories/snapshots/</url>
     </snapshotRepository>
   </distributionManagement>
 
